--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,6 @@ body {
 
 .container {
   margin: 0 5%;
-  width: 100%;
 }
 
 /* Header */
@@ -40,6 +39,17 @@ body {
 
   display: flex;
   align-items: center;
+
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: var(--color-black);
+}
+
+.header .container {
+  width: 90%;
 }
 
 .menu {
@@ -57,6 +67,7 @@ body {
 
 /* Main */
 .main {
+  margin-top: 55px;
   padding: 40px 0 59px;
   max-width: 445px;
 
