--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,8 @@ body {
   font-family: "Inter-Regular";
   font-size: 14px;
   line-height: 17px;
+
+  position: relative;
 }
 
 .container {
@@ -73,19 +75,21 @@ body {
 
 /* Main */
 .main {
+  overflow: hidden;
+
   margin-top: 55px;
   padding: 40px 0 59px;
   max-width: 445px;
 
-  background-image: radial-gradient(
+  background-image: url("../assets/noise.png"),
+    radial-gradient(
       238.53% 189.02% at 3.2% 3.49%,
       rgba(255, 246, 233, 0.1) 0%,
       rgba(26, 29, 35, 0.1) 26.62%,
       rgba(26, 29, 35, 0.1) 52.1%,
       rgba(26, 29, 35, 0.01) 70.17%,
       rgba(26, 29, 35, 0) 100%
-    ),
-    url("../assets/noise.png");
+    );
 
   backdrop-filter: blur(7.5px);
   background-position: center center;
@@ -93,10 +97,9 @@ body {
   background-size: cover;
 }
 .main__header {
-  max-width: 272px;
-
   margin-bottom: 45px;
 }
+
 .main__header-title {
   margin-bottom: 15px;
 }
@@ -274,3 +277,27 @@ body {
 .body-info__item-underline {
   text-decoration-line: underline;
 }
+
+/* Шары */
+.ball {
+  position: absolute;
+}
+
+.ball-purple-light {
+  width: 259px;
+  height: 259px;
+  left: 258px;
+  top: 107px;
+
+  z-index: 1;
+  border-radius: 50%;
+  background: #833ab4;
+  opacity: 0.5;
+  /* filter: blur(196px); */
+}
+
+/*
+Текст выше кружков
+position: relative;
+    z-index: 6;
+*/
