--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,7 @@ body {
   background-size: cover;
 }
 .main__header {
-  margin-bottom: 45px;
+  margin-bottom: 46px;
 }
 
 .main__header-title {
@@ -107,9 +107,13 @@ body {
 .main__header-title-text {
   font-size: 36px;
   line-height: 44px;
+
+  margin-left: -2px;
 }
 
 .main__header-title-text span {
+  margin-left: 1px;
+
   font-family: "Inter-Black";
   background: linear-gradient(
       92deg,
@@ -124,9 +128,15 @@ body {
 }
 
 .main__header-text {
+  margin-left: -2px;
+
   font-family: "Montserrat-Regular";
   font-size: 18px;
   line-height: 22px;
+}
+
+.main__offer {
+  margin-left: -1px;
 }
 
 .offer__text {
@@ -159,17 +169,17 @@ body {
 }
 
 .offer__list {
-  /* сделать grid */
-  display: flex;
-  row-gap: 14px;
-  column-gap: 10px;
-  flex-wrap: wrap;
+  display: grid;
+  row-gap: 15px;
+  grid-template-columns: 0.76fr 1fr;
+
+  margin-left: 1px;
 }
 
 .offer__list_item {
   font-family: "Montserrat-Regular";
   font-size: 13px;
-  line-height: 16px;
+  line-height: 15px;
 
   letter-spacing: 0.05em;
   text-transform: uppercase;
@@ -191,7 +201,7 @@ body {
   position: absolute;
   left: -15px;
   margin: auto;
-  top: 0;
+  top: -3px;
   bottom: 0;
 }
 
@@ -229,26 +239,38 @@ body {
   flex-wrap: wrap;
 }
 
+.block-about .block__body {
+  margin-left: -1px;
+}
+
 .block__body-item {
   font-family: "Inter-Regular";
 }
 
 .block-menu .block__body {
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 7px;
+  row-gap: 10px;
+
+  margin-left: -1px;
 }
 
 .block-menu .block__body-item {
-  width: 43%;
+  width: 89%;
 }
 
 .block__body-phone {
+  margin-left: -1px;
   margin-bottom: 8px;
 
   font-family: "Inter-Medium";
+  font-size: 16px;
+  line-height: 19px;
 }
 
 .block__body-links {
-  margin-bottom: 10px;
+  margin-bottom: 7px;
 
   display: flex;
   gap: 10px;
@@ -259,6 +281,7 @@ body {
 }
 
 .block__body-address {
+  margin-left: -1px;
   margin-bottom: 50px;
 }
 
@@ -272,6 +295,8 @@ body {
   font-family: "Montserrat-Regular";
   font-size: 12px;
   line-height: 15px;
+
+  margin-left: -1px;
 }
 
 .body-info__item-underline {
